--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
+    "@types/express": "^5.0.5",
     "@types/pg": "^8.15.6"
   },
   "name": "project_group_37_recipe_sharing_platform",
