--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "bcryptjs": "^2.4.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
-    "@types/pg": "^8.15.6"
+    "@types/pg": "^8.15.6",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4"
   },
   "name": "project_group_37_recipe_sharing_platform",
   "version": "1.0.0",
@@ -16,8 +19,9 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "start": "node app.js",
+    "migrate": "node scripts/migrate.js"
   },
   "repository": {
     "type": "git",
